<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Star Engine</string>
    <string name="start_game">Start Game</string>
    <string name="high_scores">High Scores</string>
    <string name="upgrades">Upgrades</string>
    <string name="score">Score: %1$d</string>
    <string name="game_over">Game Over</string>
    <string name="final_score">Final Score: %1$d</string>
    <string name="play_again">Play Again</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="top_scores">Top 5 Scores</string>
    <string name="no_scores">No scores yet. Play a game to set a high score!</string>
    <string name="fire_rate">Fire Rate</string>
    <string name="bullet_power">Bullet Power</string>
    <string name="ship_width">Ship Width</string>
    <string name="current_level">Level: %1$d</string>
    <string name="upgrade_cost">Cost: %1$d points</string>
    <string name="purchase">Purchase</string>
    <string name="purchased">Purchased</string>
    <string name="insufficient_points">Insufficient points</string>
</resources>

